# carina-provider-github

./: .carina-core-min-rev  .gitmodules  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
carina-provider-github/: Cargo.toml
carina-provider-github/src/: lib.rs  main.rs
docs/: design.md
scripts/: check-carina-pin.sh
